deciding what to put where
I can code add, remove, and sort fine in both, I'm just still indecisive on both. Also currently trying to figure out how to do both implementations in one test without doing both